# Document-Aware-RAG-Agent

./: .env.example  .gitignore  AGENTS.md  RAG_AGENT_PLAN.md  README.md  knowledge.md  main.py  pyproject.toml
app/: __init__.py  embeddings.py  ingest.py  rag.py  vectorstore.py
scripts/: build_index.py
skills/knowledge-capture/: SKILL.md
skills/knowledge-capture/agents/: openai.yaml
